@@ -1,6 +1,7 @@
 0.17
  - Add missing dependency for Getopt::Std.
  - Fix minimal Perl version in Makefile.PL.
+ - Update Module::Install to 1.19 version.
  - Update copyright years.
 
 0.16 2015-10-15T13:57:30+02:00
